// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`card form wrapper disables the save button if canSubmit is false 1`] = `
<div
  className="card--container"
  id="start-main-content"
>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row card"
    >
      <div
        className="ds-l-col--1 ds-u-margin-left--auto"
      />
      <div
        className="ds-l-col--12 ds-l-sm-col--10 ds-l-lg-col--6"
      >
        <div
          className="ds-u-display--flex ds-u-flex-direction--column ds-u-justify-content--center ds-u-align-items--center"
        >
          <img
            alt="eAPD Logo"
            src="/static/img/eAPDLogoSVG:ICO/SVG/eAPDColVarSVG.svg"
          />
          <h1
            className="ds-h1 ds-u-margin-top--2"
          >
            test
          </h1>
        </div>
        <form
          onSubmit={[Function]}
        >
          <fieldset
            className="ds-u-margin--0 ds-u-padding--0 ds-u-border--0"
          >
            hello world
            <div
              className="ds-u-margin-top--5"
            >
              <Button
                component="button"
                disabled={true}
                type="submit"
                variation="primary"
              >
                Save changes
              </Button>
              <Button
                component="button"
                onClick={[Function]}
                type="button"
                variation="transparent"
              >
                Cancel
              </Button>
            </div>
          </fieldset>
        </form>
      </div>
      <div
        className="ds-l-col--1 ds-u-margin-right--auto"
      />
    </div>
  </div>
</div>
`;

exports[`card form wrapper does not render a cancel button if form is not cancelable 1`] = `
<div
  className="card--container"
  id="start-main-content"
>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row card"
    >
      <div
        className="ds-l-col--1 ds-u-margin-left--auto"
      />
      <div
        className="ds-l-col--12 ds-l-sm-col--10 ds-l-lg-col--6"
      >
        <div
          className="ds-u-display--flex ds-u-flex-direction--column ds-u-justify-content--center ds-u-align-items--center"
        >
          <img
            alt="eAPD Logo"
            src="/static/img/eAPDLogoSVG:ICO/SVG/eAPDColVarSVG.svg"
          />
          <h1
            className="ds-h1 ds-u-margin-top--2"
          >
            test
          </h1>
        </div>
        <form
          onSubmit={[Function]}
        >
          <fieldset
            className="ds-u-margin--0 ds-u-padding--0 ds-u-border--0"
          >
            hello world
            <div
              className="ds-u-margin-top--5"
            />
          </fieldset>
        </form>
      </div>
      <div
        className="ds-l-col--1 ds-u-margin-right--auto"
      />
    </div>
  </div>
</div>
`;

exports[`card form wrapper renders a legend if provided 1`] = `
<div
  className="card--container"
  id="start-main-content"
>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row card"
    >
      <div
        className="ds-l-col--1 ds-u-margin-left--auto"
      />
      <div
        className="ds-l-col--12 ds-l-sm-col--10 ds-l-lg-col--6"
      >
        <div
          className="ds-u-display--flex ds-u-flex-direction--column ds-u-justify-content--center ds-u-align-items--center"
        >
          <img
            alt="eAPD Logo"
            src="/static/img/eAPDLogoSVG:ICO/SVG/eAPDColVarSVG.svg"
          />
          <h1
            className="ds-h1 ds-u-margin-top--2"
          >
            test
          </h1>
        </div>
        <form
          onSubmit={[Function]}
        >
          <fieldset
            className="ds-u-margin--0 ds-u-padding--0 ds-u-border--0"
          >
            <legend
              className="ds-u-visibility--screen-reader"
            >
              of zelda
            </legend>
            hello world
            <div
              className="ds-u-margin-top--5"
            >
              <Button
                component="button"
                onClick={[Function]}
                type="button"
                variation="transparent"
              >
                Cancel
              </Button>
            </div>
          </fieldset>
        </form>
      </div>
      <div
        className="ds-l-col--1 ds-u-margin-right--auto"
      />
    </div>
  </div>
</div>
`;

exports[`card form wrapper renders a spinny-wheel on the save button and disables it if the form is busy 1`] = `
<div
  className="card--container"
  id="start-main-content"
>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row card"
    >
      <div
        className="ds-l-col--1 ds-u-margin-left--auto"
      />
      <div
        className="ds-l-col--12 ds-l-sm-col--10 ds-l-lg-col--6"
      >
        <div
          className="ds-u-display--flex ds-u-flex-direction--column ds-u-justify-content--center ds-u-align-items--center"
        >
          <img
            alt="eAPD Logo"
            src="/static/img/eAPDLogoSVG:ICO/SVG/eAPDColVarSVG.svg"
          />
          <h1
            className="ds-h1 ds-u-margin-top--2"
          >
            test
          </h1>
        </div>
        <form
          onSubmit={[Function]}
        >
          <fieldset
            className="ds-u-margin--0 ds-u-padding--0 ds-u-border--0"
          >
            hello world
            <div
              className="ds-u-margin-top--5"
            >
              <Button
                component="button"
                disabled={true}
                type="submit"
                variation="primary"
              >
                <Spinner
                  aria-valuetext="Loading"
                  role="progressbar"
                />
                 
                Working
              </Button>
              <Button
                component="button"
                onClick={[Function]}
                type="button"
                variation="transparent"
              >
                Cancel
              </Button>
            </div>
          </fieldset>
        </form>
      </div>
      <div
        className="ds-l-col--1 ds-u-margin-right--auto"
      />
    </div>
  </div>
</div>
`;

exports[`card form wrapper renders a success alert if message provided 1`] = `
<div
  className="card--container"
  id="start-main-content"
>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row card"
    >
      <div
        className="ds-l-col--1 ds-u-margin-left--auto"
      />
      <div
        className="ds-l-col--12 ds-l-sm-col--10 ds-l-lg-col--6"
      >
        <div
          className="ds-u-display--flex ds-u-flex-direction--column ds-u-justify-content--center ds-u-align-items--center"
        >
          <img
            alt="eAPD Logo"
            src="/static/img/eAPDLogoSVG:ICO/SVG/eAPDColVarSVG.svg"
          />
          <h1
            className="ds-h1 ds-u-margin-top--2"
          >
            test
          </h1>
        </div>
        <div
          className="ds-u-margin-top--3"
        >
          oh yeah!
        </div>
        <form
          onSubmit={[Function]}
        >
          <fieldset
            className="ds-u-margin--0 ds-u-padding--0 ds-u-border--0"
          >
            hello world
            <div
              className="ds-u-margin-top--5"
            >
              <Button
                component="button"
                onClick={[Function]}
                type="button"
                variation="transparent"
              >
                Cancel
              </Button>
            </div>
          </fieldset>
        </form>
      </div>
      <div
        className="ds-l-col--1 ds-u-margin-right--auto"
      />
    </div>
  </div>
</div>
`;

exports[`card form wrapper renders an error alert if message provided 1`] = `
<div
  className="card--container"
  id="start-main-content"
>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row card"
    >
      <div
        className="ds-l-col--1 ds-u-margin-left--auto"
      />
      <div
        className="ds-l-col--12 ds-l-sm-col--10 ds-l-lg-col--6"
      >
        <div
          className="ds-u-display--flex ds-u-flex-direction--column ds-u-justify-content--center ds-u-align-items--center"
        >
          <img
            alt="eAPD Logo"
            src="/static/img/eAPDLogoSVG:ICO/SVG/eAPDColVarSVG.svg"
          />
          <h1
            className="ds-h1 ds-u-margin-top--2"
          >
            test
          </h1>
        </div>
        <div
          className="ds-u-margin-top--3 ds-u-color--error"
        >
          oh noes!
        </div>
        <form
          onSubmit={[Function]}
        >
          <fieldset
            className="ds-u-margin--0 ds-u-padding--0 ds-u-border--0"
          >
            hello world
            <div
              className="ds-u-margin-top--5"
            >
              <Button
                component="button"
                onClick={[Function]}
                type="button"
                variation="transparent"
              >
                Cancel
              </Button>
            </div>
          </fieldset>
        </form>
      </div>
      <div
        className="ds-l-col--1 ds-u-margin-right--auto"
      />
    </div>
  </div>
</div>
`;

exports[`card form wrapper renders with a save button if onSave prop is provided 1`] = `
<div
  className="card--container"
  id="start-main-content"
>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row card"
    >
      <div
        className="ds-l-col--1 ds-u-margin-left--auto"
      />
      <div
        className="ds-l-col--12 ds-l-sm-col--10 ds-l-lg-col--6"
      >
        <div
          className="ds-u-display--flex ds-u-flex-direction--column ds-u-justify-content--center ds-u-align-items--center"
        >
          <img
            alt="eAPD Logo"
            src="/static/img/eAPDLogoSVG:ICO/SVG/eAPDColVarSVG.svg"
          />
          <h1
            className="ds-h1 ds-u-margin-top--2"
          >
            test
          </h1>
        </div>
        <form
          onSubmit={[Function]}
        >
          <fieldset
            className="ds-u-margin--0 ds-u-padding--0 ds-u-border--0"
          >
            hello world
            <div
              className="ds-u-margin-top--5"
            >
              <Button
                component="button"
                disabled={false}
                type="submit"
                variation="primary"
              >
                Save changes
              </Button>
              <Button
                component="button"
                onClick={[Function]}
                type="button"
                variation="transparent"
              >
                Cancel
              </Button>
            </div>
          </fieldset>
        </form>
      </div>
      <div
        className="ds-l-col--1 ds-u-margin-right--auto"
      />
    </div>
  </div>
</div>
`;

exports[`card form wrapper renders with the default id on the container if id prop is not set 1`] = `
<div
  className="card--container"
  id="start-main-content"
>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row card"
    >
      <div
        className="ds-l-col--1 ds-u-margin-left--auto"
      />
      <div
        className="ds-l-col--12 ds-l-sm-col--10 ds-l-lg-col--6"
      >
        <div
          className="ds-u-display--flex ds-u-flex-direction--column ds-u-justify-content--center ds-u-align-items--center"
        >
          <img
            alt="eAPD Logo"
            src="/static/img/eAPDLogoSVG:ICO/SVG/eAPDColVarSVG.svg"
          />
          <h1
            className="ds-h1 ds-u-margin-top--2"
          >
            test
          </h1>
        </div>
        <form
          onSubmit={[Function]}
        >
          <fieldset
            className="ds-u-margin--0 ds-u-padding--0 ds-u-border--0"
          >
            hello world
            <div
              className="ds-u-margin-top--5"
            >
              <Button
                component="button"
                onClick={[Function]}
                type="button"
                variation="transparent"
              >
                Cancel
              </Button>
            </div>
          </fieldset>
        </form>
      </div>
      <div
        className="ds-l-col--1 ds-u-margin-right--auto"
      />
    </div>
  </div>
</div>
`;

exports[`card form wrapper renders with the provided id on the container if id prop is set 1`] = `
<div
  className="card--container"
  id="my custom id"
>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row card"
    >
      <div
        className="ds-l-col--1 ds-u-margin-left--auto"
      />
      <div
        className="ds-l-col--12 ds-l-sm-col--10 ds-l-lg-col--6"
      >
        <div
          className="ds-u-display--flex ds-u-flex-direction--column ds-u-justify-content--center ds-u-align-items--center"
        >
          <img
            alt="eAPD Logo"
            src="/static/img/eAPDLogoSVG:ICO/SVG/eAPDColVarSVG.svg"
          />
          <h1
            className="ds-h1 ds-u-margin-top--2"
          >
            test
          </h1>
        </div>
        <form
          onSubmit={[Function]}
        >
          <fieldset
            className="ds-u-margin--0 ds-u-padding--0 ds-u-border--0"
          >
            hello world
            <div
              className="ds-u-margin-top--5"
            >
              <Button
                component="button"
                onClick={[Function]}
                type="button"
                variation="transparent"
              >
                Cancel
              </Button>
            </div>
          </fieldset>
        </form>
      </div>
      <div
        className="ds-l-col--1 ds-u-margin-right--auto"
      />
    </div>
  </div>
</div>
`;

exports[`card form wrapper renders without a save button if onSave prop is missing 1`] = `
<div
  className="card--container"
  id="start-main-content"
>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row card"
    >
      <div
        className="ds-l-col--1 ds-u-margin-left--auto"
      />
      <div
        className="ds-l-col--12 ds-l-sm-col--10 ds-l-lg-col--6"
      >
        <div
          className="ds-u-display--flex ds-u-flex-direction--column ds-u-justify-content--center ds-u-align-items--center"
        >
          <img
            alt="eAPD Logo"
            src="/static/img/eAPDLogoSVG:ICO/SVG/eAPDColVarSVG.svg"
          />
          <h1
            className="ds-h1 ds-u-margin-top--2"
          >
            test
          </h1>
        </div>
        <form
          onSubmit={[Function]}
        >
          <fieldset
            className="ds-u-margin--0 ds-u-padding--0 ds-u-border--0"
          >
            hello world
            <div
              className="ds-u-margin-top--5"
            >
              <Button
                component="button"
                onClick={[Function]}
                type="button"
                variation="transparent"
              >
                Cancel
              </Button>
            </div>
          </fieldset>
        </form>
      </div>
      <div
        className="ds-l-col--1 ds-u-margin-right--auto"
      />
    </div>
  </div>
</div>
`;

exports[`card form wrapper renders without an id on the container if id prop is null 1`] = `
<div
  className="card--container"
  id={null}
>
  <div
    className="ds-l-container"
  >
    <div
      className="ds-l-row card"
    >
      <div
        className="ds-l-col--1 ds-u-margin-left--auto"
      />
      <div
        className="ds-l-col--12 ds-l-sm-col--10 ds-l-lg-col--6"
      >
        <div
          className="ds-u-display--flex ds-u-flex-direction--column ds-u-justify-content--center ds-u-align-items--center"
        >
          <img
            alt="eAPD Logo"
            src="/static/img/eAPDLogoSVG:ICO/SVG/eAPDColVarSVG.svg"
          />
          <h1
            className="ds-h1 ds-u-margin-top--2"
          >
            test
          </h1>
        </div>
        <form
          onSubmit={[Function]}
        >
          <fieldset
            className="ds-u-margin--0 ds-u-padding--0 ds-u-border--0"
          >
            hello world
            <div
              className="ds-u-margin-top--5"
            >
              <Button
                component="button"
                onClick={[Function]}
                type="button"
                variation="transparent"
              >
                Cancel
              </Button>
            </div>
          </fieldset>
        </form>
      </div>
      <div
        className="ds-l-col--1 ds-u-margin-right--auto"
      />
    </div>
  </div>
</div>
`;
